# xrechnung

./: Cargo.toml  README.md  create-release.sh  update-readme.sh
.forgejo/workflows/: build-and-tests.yaml
.github/workflows/: build-and-tests.yaml
xrechnung/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
xrechnung/examples/: config.toml
xrechnung/src/: config.rs  data.rs  lib.rs  xml_bill.rs  xml_writer.rs
xrechnung_cmd/: Cargo.toml
xrechnung_cmd/examples/: invoice-lines.csv
xrechnung_cmd/src/: main.rs
